# msc-thesis-code

./: .gitignore  LICENSE  README.md  env.template  pyproject.toml  test_multi_standard.py  test_security_requirements.qmd
generations/: analysis_charts.ipynb  results.csv
generations/results/generation-stats/: collect_results.py  summary_statistics.csv
generations/results/questionnaire/: questionnaire-results.csv
src/security_requirements_system/: crew.py  data_models.py  main.py  main_old.py.bak  orchestrator.py  output_generator.py  state.py  traceability.py
src/security_requirements_system/config/: agents.yaml  tasks.yaml
src/security_requirements_system/crews/compliance_crew/: __init__.py  compliance_crew.py
src/security_requirements_system/crews/domain_security_crew/: __init__.py  domain_security_crew.py
src/security_requirements_system/crews/llm_security_crew/: __init__.py  llm_security_crew.py
src/security_requirements_system/crews/requirements_analysis_crew/: __init__.py  requirements_analysis_crew.py
src/security_requirements_system/data/: prepare_owasp_asvs.py
src/security_requirements_system/tools/: weaviate_setup.py  weaviate_tool.py
test_outputs/: compliance_output.json  domain_security_output.json  llm_security_output.json  requirements_analysis_output.json  roadmap_output.json  security_architecture_output.json  stakeholder_output.json  threat_modeling_output.json  validation_output.json  verification_output.json
tests/: test_crews.ipynb  test_security_requirements.qmd  test_unified_crew.ipynb
(+32 files in other folders)
